--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="adminApplication.html"
+              <a class="nav-link" href="index.html"
                 >Admin Application <span class="sr-only">(current)</span></a
               >
             </li>
